<resources>
    <string name="app_name">CampusWork</string>
    <string name="empty"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_two_line">这是详情这是详情这是详情这这是详情这是详情这是详情这这是详情这是详情这是详情这这是详情这是详情这是详情这这是详情这是详情这是详情这这是详情这是详情这是详情这这是详情这是详情这是详情这</string>


    <string name="action_settings">Settings</string>
    <string name="action_position">模拟位置</string>
    <string name="drawer_home">首页</string>
    <string name="drawer_news">最新兼职</string>
    <string name="drawer_person">个人中心</string>
    <string name="drawer_tool">实用功能</string>
<!--个人中心-->
    <string name="d11">亲，马上去完善简历吧</string>
    <string name="d12">未实名</string>
    <string name="d21">个人资料</string>
    <string name="d22">修改密码</string>
    <string name="d31">我的申请</string>
    <string name="d41">报名</string>
    <string name="d42">录用</string>
    <string name="d43">完成</string>
    <string name="d44">历史</string>
    <string name="d51">我的收藏</string>
    <string name="d61">实名认证</string>
    <string name="d71">意见反馈</string>
    <string name="d81">更   多</string>
    <string name="loading_error"><![CDATA[网络不给力>_<,点击刷新<]]></string>

    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>

    <!-- 招聘信息-->
    <string name="news_time">选择时间</string>
    <string name="news_type">选择类型</string>
    <string name="new_error">没找到合适的信息请修改选择条件</string>
    <string name="all">*全选</string>
    <string name="short_time">短期兼职</string>
    <string name="long_time">长期兼职</string>
    <string name="enter">确定</string>

    <string name="type1">派单</string>
    <string name="type2">礼仪</string>
    <string name="type3">促销</string>
    <string name="type4">家教</string>
    <string name="type5">模特</string>
    <string name="type6">演出</string>
    <string name="type7">其他</string>

    <!-- 工作详情页面-->
    <string name="job_type">兼职类型:</string>
    <string name="job_num">招聘人数:</string>
    <string name="job_salary">工资待遇:</string>
    <string name="job_sex">性别要求:</string>
    <string name="job_organ">发布机构:</string>
    <string name="job_day">工作时间:</string>
    <string name="job_time">上班时段:</string>
    <string name="job_content">工作内容:</string>
    <string name="job_address">详细地址:</string>
    <string name="job_person">联系人:</string>
    <string name="job_tel">联系电话:</string>
    <string name="job_warn">(提示: 凡收取费用的兼职，需谨慎)</string>
    <string name="job_des"> 1.专业要求：投资、金融、工商管理、法学、马克思主义理论、国际关系、财务、会计、审计、统计、新闻传播、计算机科学与技术等相关专业。
      2.英语听、说、读、写能力优秀，口语流利。
      3.具备一定的组织协调能力，文字功底扎实。
      4.有较强的团队合作和沟通能力，具有良好的职业道德与操守，进取心强、愿意主动融入企业文化。
      5.部分岗位政治面貌要求为中共党员（包括预备党员）。</string>

<!--sharesdk-->
    <string name="share">分享</string>


    <string name="que1">A：口袋兼职app为免费的找兼职工具，不收任何费用。并且审核通过发布的兼职信息均为安全信息，如发现收取押金、办工作证、会员卡等名义请注意真实性！欢迎向我们举报，我们将会第一时间处理，封停相应账号，保障用户权益！</string>
    <string name="que2">A：可能是商家不方便回复，可耐心等待，或尝试拨打电话。</string>
    <string name="que3">A：可加客服QQ: 929182889，我们期待你的反馈。</string>
    <string name="que4">A：首先先仔细阅读兼职描述，点击在线报名按商家要求填写报名信息，耐心等待商家录取，如被录取APP会推送商家通知。如有疑问，可通过在线聊天或者打电话咨询商家。</string>
    <string name="que5">A：因某些机型适配不稳定，重新下载安装即可解决。仍有问题，可向客服反馈。</string>
    <string name="que44">Q：出现\"口袋兼职-停止运行\"、\"程序已停止\"、闪退现象。</string>
    <string name="que55">Q：我找到想应聘的兼职，如何报名？</string>
    <string name="gui1">非法黑中介只收钱，不介绍工作，或者让求职者跑去其他地方，却被以各种理由拒绝，更有甚者，打一枪换一个地方，交钱后连人都找不到了。大学生进门要先看该职介中心是否有《职业介绍许可证》和工商部门颁发的营业执照。正规中介机构除具有中介许可证外，一般会将营业执照悬挂在大厅等显著位置。 正规兼职一般都不会收取办工作证、办会员卡等费用，如要收取费用，请小心是否是虚假兼职招聘单位。</string>
    <string name="gui2">有的要求大学生支付押金，承诺交了押金后就可以上班，但之后又以人员已满等各种借口要求等消息，而且拒返押金，最后就没有音讯了。有的收取保证金，称以此“保证”学生按要求上班，并答应在打工结束后归还。可是到结算工资的时候，保证金却不见踪影。 拒交各种押金和保证金以及身份证；任何招聘单位以任何名义向求职者收取押金属于非法行为，大学生遇到该情况要坚持拒交或举报。</string>
    <string name="gui3">传销公司一般先安排学生以销售人员的名义上岗工作，然后公司让学生交纳一定的提货款，再让学生去哄骗他人。有的同学在高回扣的诱饵下，甚至去欺骗自己的同学、朋友。上当之后又往往骑虎难下，最终只得自己白搭上一笔钱。 大学生要提高防范意识，了解基本传销特征——职责是“发展更多的人”+交纳昂贵会费+很多人情绪激昂。一旦识别出传销，立即停止打工，及时报警。抵制高回扣的诱惑，时刻维护自身合法权益，防止陷入传销陷阱。</string>
    <string name="gui4">一些不法分子以高薪聘请家教、秘书等名义把目光瞄上涉事不深、找工作心切的大学生。一不小心落入陷阱后，青年学生轻则失身，重则危及生命。 大学生假期做家教要注意安全，要认真核实对方身份真实性，要明确工作时间地点，同时要常与家人、朋友保持联系，告知家教或工作地点，了解自己工作动态。</string>
    <string name="gui5">这类骗子在面试学生后，通常要求参加公司的上岗培训，并要交培训费，有的进行一些培训，发培训资料、光盘等，但这些资料与考试内容无任何关系。有的甚至根本不培训，收钱后做个样子。 培训都是免费或带薪的，请勿缴纳任何费用！</string>
    <string name="protocol">协议内容</string>

    <string name="ps">请输入工作经验，应聘会加分呦</string>


</resources>
