<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="15dp">

    <CheckBox
        android:id="@+id/cb_all"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/all"
        android:textColor="@color/orange" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_1"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_2"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_3"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_4"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_5"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_6"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <CheckBox
        android:id="@+id/cb_7"
        style="@style/item_check"
        android:checked="false"
        android:text="@string/type7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/type_btn_enter"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/orange"
            android:text="@string/enter"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>
