<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/drawer_home" />
        <item android:id="@+id/nav_news" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/drawer_news" />
        <item android:id="@+id/nav_tool" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/drawer_tool" />
        <item android:id="@+id/nav_person" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/drawer_person" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_send"
                android:title="退出" />
        </menu>
    </item>

</menu>