<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shun="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@mipmap/guide"/>

    <com.shun.campuswork.view.TextPopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        shun:tv_des="@string/gui1"
        shun:tv_title="防止黑中介骗取中介费" />

    <com.shun.campuswork.view.TextPopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        shun:tv_des="@string/gui2"
        shun:tv_title="拒绝各种押金，保证金" />

    <com.shun.campuswork.view.TextPopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        shun:tv_des="@string/gui3"
        shun:tv_title="远离传销，误入当止" />

    <com.shun.campuswork.view.TextPopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        shun:tv_des="@string/gui4"
        shun:tv_title="做家教谨防被侵犯" />

    <com.shun.campuswork.view.TextPopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        shun:tv_des="@string/gui5"
        shun:tv_title="扣取高额培训费" />

</LinearLayout>