<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shun="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/white"
    android:orientation="vertical">

    <com.shun.campuswork.view.TextImageView
        android:id="@+id/tiv_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        shun:view_image="@mipmap/love"
        shun:view_title="@string/d51" />

    <com.shun.campuswork.view.TextImageView
        android:id="@+id/tiv_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        shun:view_image="@mipmap/icon_crown1"
        shun:view_title="@string/d61" />

    <com.shun.campuswork.view.TextImageView
        android:id="@+id/tiv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        shun:view_image="@mipmap/seed"
        shun:view_title="@string/d71" />

    <com.shun.campuswork.view.TextImageView
        android:id="@+id/tiv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        shun:view_image="@mipmap/more_green"
        shun:view_title="@string/d81" />

</LinearLayout>