<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/item_person"
        android:text="@string/d31" />

    <View style="@style/vertical_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@mipmap/drafts"
                android:gravity="center"
                android:text="@string/d41" />
        </LinearLayout>

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@mipmap/follower"
                android:gravity="center"
                android:text="@string/d42" />
        </LinearLayout>

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@mipmap/complete"
                android:gravity="center"
                android:text="@string/d43" />
        </LinearLayout>

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@mipmap/pay"
                android:gravity="center"
                android:text="@string/d44" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>