<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/orange"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/news_tv_time"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/news_time"/>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="20dp"-->
            <!--android:background="@color/orange">-->
            <!-- -->
        <!--</LinearLayout>-->
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@mipmap/oblique"/>
        <TextView
            android:id="@+id/news_tv_type"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/news_type"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_ll_error"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center">

        <TextView
            android:id="@+id/news_tv_error"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:drawableTop="@mipmap/default_cry"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/error_text"
            android:lines="2"
            android:text="@string/new_error"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/news_ll_content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="gone">

      <com.shun.campuswork.view.MyListView
          android:id="@+id/news_lv_content"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
      </com.shun.campuswork.view.MyListView>
    </LinearLayout>

</LinearLayout>
