<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView3"
        style="@style/job_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_person" />

    <TextView
        android:id="@+id/job_tv_name"
        style="@style/job_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_person"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/job_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:text="@string/job_tel" />
    <TextView
        android:id="@+id/job_tv_tel"
        style="@style/job_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_tel"
        android:layout_above="@+id/textView7"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        style="@style/job_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:paddingTop="10dp"
        android:text="@string/job_warn"
        android:id="@+id/textView7" />

    <LinearLayout
        android:id="@+id/pos_2"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@mipmap/consult" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="工作咨询"
            android:textSize="13sp"
            android:textColor="@color/orange" />
    </LinearLayout>

    <View
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/pos_2"
        android:background="@color/line" />
</RelativeLayout>
