<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/iv_person_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@mipmap/default_head5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/iv_person_head"
            android:text="@string/d11"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@mipmap/wallet"
                android:drawablePadding="10dp"
                android:text="@string/d21" />
        </LinearLayout>
        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@mipmap/secure"
                android:drawablePadding="10dp"
                android:text="@string/d22" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>